fix: visibility hidden

--- a/noborder_gray.css
+++ b/noborder_gray.css
@@ -99,5 +99,5 @@ main .gsc-loading-image {
 }
 
 .gsc-comments {
-    display: none;
+    visibility: hidden;
 }
